--- a/data_management/tests/dockers/docker-compose-ssl.yml
+++ b/data_management/tests/dockers/docker-compose-ssl.yml
@@ -19,7 +19,7 @@ services:
   #  LOGIC MODULE ON DC 1            #
   ####################################
   logicmodule1:
-    image: mf2c/dataclay-logicmodule:latest
+    image: mf2c/trunk:dataclay-logicmodule-2.28
     env_file:
       - ./env/LM.environment
     environment:
@@ -48,7 +48,7 @@ services:
   #  JAVA DATA SERVICES ON DC 1      #
   ####################################
   ds1java1:
-    image: mf2c/dataclay-dsjava:latest
+    image: mf2c/trunk:dataclay-dsjava-2.28
     depends_on:
       - logicmodule1
       - proxy
